--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site em Construção</title>
+    <title>Em Construção</title>
     <style>
         * {
             margin: 0;
@@ -115,7 +115,7 @@
         
         <div class="contact">
             <p>Para mais informações, entre em contato:</p>
-            <a href="mailto:contato@exemplo.com">contato@exemplo.com</a>
+            <a href="horsforddeveloper@gmail.com">horsforddeveloper@gmail.com"</a>
         </div>
     </div>
 </body>
