--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Em Construção</title>
+  <title>Marcos Horsford</title>
   <style>
     * {
       margin: 0;
@@ -184,7 +184,7 @@
     <h1>EM CONSTRUÇÃO</h1>
     <p>Estamos preparando algo especial para você</p>
     <div class="contact">
-      <a href="mailto:contato@exemplo.com">contato@exemplo.com</a>
+      <a href="mailto:horsforddeveloper@gmail.comm">horsforddeveloper@gmail.com</a>
     </div>
   </div>
 </body>
